@@ -1,3 +1,7 @@
+Fri Sep 10 18:04:48 2004  Shugo Maeda  <shugo@modruby.net>
+
+	* request.c (request_send_fd): fixed a bug with Apache2.
+
 Sun Aug 29 10:56:53 2004  NISHI Takao  <zophos@Dadd9.com>
 
 	* mod_ruby.c (mod_ruby_setenv): call ruby_unsetenv() before
